<resources>
    <string name="app_name">WorkoutOrganizerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="bodyweight_short">BW</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="notes">Notes</string>
    <string name="add_routine">Add routine</string>
    <string name="single_leg_single_arm">Single Leg/Single Arm</string>
    <string name="web_client_id">672863711286-lebcp3jb39vs1kjfa8q0dsgffhli12a2.apps.googleusercontent.com</string>
    <string name="category_statistics">Category Statistics</string>
    <string name="exercises">Exercises</string>
</resources>